# Mag3tometer

./: Launcher.bat
3 Axis Magnetometer/: Cargo.toml  bindings.rs
3 Axis Magnetometer/src/: lib.rs  main.rs
magnetometer_gui/: gui_v3.py  pyproject.toml
magnetometer_gui/src/magnetometer_gui/: __init__.py
