[build-dependencies]
bindgen = "0.71.1"

[package]
build = "build.rs"

name = "rust_bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
zmq = "0.10"
chrono = "0.4"
csv = "1.3.1"
rand = "0.8.5"
serde_json = "1.0.134"
rustfft = "6.2.0"
ctrlc = "3.4.5"
