[project]
name = "magnetometer-gui"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "pyqt5>=5.15.11",
    "zmq>=0.0.0",
    "numpy>=2.2.1",
    "matplotlib>=3.10.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/magnetometer_gui"]
